# ai_lab_9_ros

./: CMakeLists.txt  package.xml
scripts/: comander.py
