<?xml version="1.0"?>
<package format="2">
  <name>ai_lab_9_ros</name>
  <version>0.0.0</version>
  
  <description>The ai_lab_9_ros package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>

